--- a/index.html
+++ b/index.html
@@ -13,8 +13,23 @@
 
 <body>
     <div class="container">
-   
+        <header class="nav-header">
+
+            <nav>
+
+                <a href="index.html" class="logo"></a>
+
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>     
+        </header>
         <section class="top-content">
+
+                <img class="banner" src="img/jumbo.jpg" alt="Image of a highway at night.">
+
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
