--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
+  <meta name="viewport" content="width=device-width, intial-scale=1.0">
+  
 </head>
 
 <body>
